--- a/src/client/manifest.json
+++ b/src/client/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Movie Review",
+  "name": "Movie Review",
   "icons": [
     {
       "src": "favicon.ico",
