--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "movie-app",
+  "name": "axis-assignment",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://sudhaBommakanti.github.io/AxisAssignment",
@@ -37,5 +37,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "sinon": "^9.0.0"
   }
 }
